Refactor output path handling in tests to use temporary directories; rework TOP mechanism; small bug fixes